settings restructuring